--- a/package.json
+++ b/package.json
@@ -6,11 +6,20 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "google-maps-react": "^2.0.2",
     "materialize-css": "^1.0.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-geoinput": "^1.0.3",
+    "react-geolocated": "^3.0.1",
+    "react-geolocation": "^1.0.4",
+    "react-geosuggest": "^2.12.1",
+    "react-google-location": "^1.2.2",
+    "react-jsonschema-form-field-geolocation": "^0.2.1",
+    "react-native-geolocation-service": "^4.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-zipcode": "^1.0.1",
     "validator": "^12.2.0"
   },
   "scripts": {
